tests/baselines/reference/objectLiteralShorthandPropertiesErrorWithModule.errors.txt
objectLiteralShorthandPropertiesErrorWithModule.ts(10,10): error TS1005: ',' expected.
objectLiteralShorthandPropertiesErrorWithModule.ts(14,3): error TS2339: Property 'y' does not exist on type 'typeof m'.


==== objectLiteralShorthandPropertiesErrorWithModule.ts (2 errors) ====
    // module export
    var x = "Foo";
    module m {
        export var x;
    }
    
    module n {
        var z = 10000;
        export var y = {
            m.x  // error
             ~
!!! error TS1005: ',' expected.
        };
    }
    
    m.y.x;
      ~
!!! error TS2339: Property 'y' does not exist on type 'typeof m'.
    